examples/test/testpolicy1563.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1563
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key13: value38
      key24: value25
      key7: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value47
      podSelector:
        matchLabels:
          key31: value14
          key2: value21
          key15: value43
